// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckMarkCell should render a CheckMarkCell 1`] = `
<div
  aria-selected={false}
  className="cell"
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell as an icon 1`] = `
<div
  aria-selected={false}
  className="cell"
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell as selectable 1`] = `
<div
  aria-selected={false}
  className="cell is-interactable"
  data-cell-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark is-selectable"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell as selectable disabled 1`] = `
<div
  aria-selected={false}
  className="cell"
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-disabled={true}
      aria-label="test text"
      className="checkmark is-selectable is-disabled"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell as selectable with selection 1`] = `
<div
  aria-selected={true}
  className="cell is-interactable"
  data-cell-show-focus="true"
  onBlur={[Function]}
  onMouseDown={[Function]}
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={true}
      aria-label="test text"
      className="checkmark is-selectable is-selected"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell as selectable with selection and disabled 1`] = `
<div
  aria-selected={true}
  className="cell"
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={true}
      aria-disabled={true}
      aria-label="test text"
      className="checkmark is-selectable is-selected is-disabled"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="-1"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render a CheckMarkCell with alignment 1`] = `
<div
  aria-selected={false}
  className="cell is-top-align"
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
    style={
      Object {
        "paddingTop": "5px",
      }
    }
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;

exports[`CheckMarkCell should render with callback functions 1`] = `
<div
  aria-selected={false}
  className="cell is-interactable"
  data-cell-show-focus="true"
  onBlur={[Function]}
  onClick={[Function]}
  onKeyDown={[Function]}
  onMouseDown={[Function]}
  role="gridcell"
  tabIndex="-1"
>
  <div
    className="container"
  >
    <div
      aria-checked={false}
      aria-label="test text"
      className="checkmark is-selectable"
      hidden={false}
      onBlur={[Function]}
      onFocus={[Function]}
      role="checkbox"
      tabIndex="0"
    />
  </div>
</div>
`;
